--- a/Proyecto Grupo 7 Progra Avanzada/Proyecto Grupo 7 Progra Avanzada.csproj
+++ b/Proyecto Grupo 7 Progra Avanzada/Proyecto Grupo 7 Progra Avanzada.csproj
@@ -7,4 +7,15 @@
     <RootNamespace>Proyecto_Grupo_7_Progra_Avanzada</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
+  </ItemGroup>
+
 </Project>
