--- a/Proyecto Grupo 7 Progra Avanzada/appsettings.json
+++ b/Proyecto Grupo 7 Progra Avanzada/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MySqlConnection": "server=45.88.196.5;port=3306;database=u484426513_xudag;user=u484426513_tubyz;password=';aqGoZNg7~'"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
