Creacion de la autenticacion mediante API y creacion de roles por usuario

--- a/Proyecto Grupo 7 Progra Avanzada/appsettings.json
+++ b/Proyecto Grupo 7 Progra Avanzada/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConnection": "server=45.88.196.5;port=3306;database=u484426513_xudag;user=u484426513_tubyz;password=';aqGoZNg7~'"
+    "MySqlConnection": "server=srv1165.hstgr.io;port=3306;database=u484426513_xudag;user=u484426513_tubyz;password=';aqGoZNg7~'"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "JwtSettings": {
+    "SecretKey": "LlaveSecretaJWT_Avanzada_2025_#P7zH",
+    "Issuer": "MiSistemaSINPE",
+    "Audience": "UsuariosAPI"
+  }
 }
+
